--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,14 +1,13 @@
-name: test
+name: check
 
 on:
   push:
     branches:
       - master
-      - main
   pull_request:
 
 jobs:
-  test:
+  check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
